c_lib/numbers/include/numbers.h

void        conv_f16_to_sci_str(float16_t h, char* buffer);
void        conv_f32_to_sci_str(float32_t f, char* buffer);
void        conv_f64_to_sci_str(float64_t d, char* buffer);
void        conv_i32_to_str(int32_t n, char* buffer);
void        conv_i64_to_str(int64_t n, char* buffer);