extra_modules/c_apis/linalg.py

import ctypes
import os
import extra_modules.execution_components.context_and_datatypes as dta
from itertools import chain
from extra_modules.execution_components.constant_system_values import SCIENTIFIC_STR_BUF_SIZE, INT_STR_BUF_SIZE, LONG_STR_BUF_SIZE
from extra_modules.c_apis.numbers import numbers_c, f16, f32, f64, i32, i64

linalg_c = ctypes.CDLL(os.path.dirname(os.path.dirname(os.path.dirname(os.path.abspath(__file__)))) + '/c_lib/linalg/lib/linalg.so')

# Typedefs
error_t                 = ctypes.c_uint
matrix_type_t           = ctypes.c_uint

float16_t               = ctypes.c_ushort
float32_t               = ctypes.c_float
float64_t               = ctypes.c_double
int32_t                 = ctypes.c_int32
int64_t                 = ctypes.c_int64

f16_subvector_container = ctypes.POINTER(float16_t)
f32_subvector_container = ctypes.POINTER(float32_t)
f64_subvector_container = ctypes.POINTER(float64_t)
i32_subvector_container = ctypes.POINTER(int32_t)
i64_subvector_container = ctypes.POINTER(int64_t)

f16_matrix_container    = ctypes.POINTER(f16_subvector_container)
f32_matrix_container    = ctypes.POINTER(f32_subvector_container)
f64_matrix_container    = ctypes.POINTER(f64_subvector_container)
i32_matrix_container    = ctypes.POINTER(i32_subvector_container)
i64_matrix_container    = ctypes.POINTER(i64_subvector_container)

# Structs
class Cfloat16_matrix_t(ctypes.Structure):
    _fields_ = [
        ("m", f16_matrix_container),
        ("x", ctypes.c_size_t),
        ("y", ctypes.c_size_t),
    ]

class Cfloat32_matrix_t(ctypes.Structure):
    _fields_ = [
        ("m", f32_matrix_container),
        ("x", ctypes.c_size_t),
        ("y", ctypes.c_size_t),
    ]

class Cfloat64_matrix_t(ctypes.Structure):
    _fields_ = [
        ("m", f64_matrix_container),
        ("x", ctypes.c_size_t),
        ("y", ctypes.c_size_t),
    ]

class Cint32_matrix_t(ctypes.Structure):
    _fields_ = [
        ("m", i32_matrix_container),
        ("x", ctypes.c_size_t),
        ("y", ctypes.c_size_t),
    ]

class Cint64_matrix_t(ctypes.Structure):
    _fields_ = [
        ("m", i64_matrix_container),
        ("x", ctypes.c_size_t),
        ("y", ctypes.c_size_t),
    ]

class Cfloat16_matrix_res_t(ctypes.Structure):
    _fields_ = [
        ("res", Cfloat16_matrix_t),
        ("err", error_t),
    ]

class Cfloat32_matrix_res_t(ctypes.Structure):
    _fields_ = [
        ("res", Cfloat32_matrix_t),
        ("err", error_t),
    ]

class Cfloat64_matrix_res_t(ctypes.Structure):
    _fields_ = [
        ("res", Cfloat64_matrix_t),
        ("err", error_t),
    ]

class Cint32_matrix_res_t(ctypes.Structure):
    _fields_ = [
        ("res", Cint32_matrix_t),
        ("err", error_t),
    ]

class Cint64_matrix_res_t(ctypes.Structure):
    _fields_ = [
        ("res", Cint64_matrix_t),
        ("err", error_t),
    ]

# Matrix cast structures and types
class Cmatrix_container_t(ctypes.Union):
    _fields_ = [
        ("f16m", Cfloat16_matrix_t),
        ("f32m", Cfloat32_matrix_t),
        ("f64m", Cfloat64_matrix_t),
        ("i32m", Cint32_matrix_t),
        ("i64m", Cint64_matrix_t),
    ]

class Cmatrix_t(ctypes.Structure):
    _fields_ = [
        ("m", Cmatrix_container_t),
        ("matrix_type", matrix_type_t),
    ]

class Cmatrix_cast_res_t(ctypes.Structure):
    _fields_ = [
        ("res_matrix", Cmatrix_t),
        ("err", error_t),
    ]

type matrix_t = f16_matrix|f32_matrix|f64_matrix|i32_matrix|i64_matrix

# Function prototypes

numbers_c.conv_f16_to_sci_str.argtypes = [float16_t, ctypes.c_char_p]
numbers_c.conv_f16_to_sci_str.restype = ctypes.c_void_p

numbers_c.conv_f32_to_sci_str.argtypes = [float32_t, ctypes.c_char_p]
numbers_c.conv_f32_to_sci_str.restype = ctypes.c_void_p

numbers_c.conv_f64_to_sci_str.argtypes = [float64_t, ctypes.c_char_p]
numbers_c.conv_f64_to_sci_str.restype = ctypes.c_void_p

numbers_c.conv_i32_to_str.argtypes = [int32_t, ctypes.c_char_p]
numbers_c.conv_i32_to_str.restype = ctypes.c_void_p

numbers_c.conv_i64_to_str.argtypes = [int64_t, ctypes.c_char_p]
numbers_c.conv_i64_to_str.restype = ctypes.c_void_p

linalg_c.free_f16m.argtypes = [Cfloat16_matrix_t]
linalg_c.free_f16m.restype = ctypes.c_void_p

linalg_c.free_f32m.argtypes = [Cfloat32_matrix_t]
linalg_c.free_f32m.restype = ctypes.c_void_p

linalg_c.free_f64m.argtypes = [Cfloat64_matrix_t]
linalg_c.free_f64m.restype = ctypes.c_void_p

linalg_c.free_i32m.argtypes = [Cint32_matrix_t]
linalg_c.free_i32m.restype = ctypes.c_void_p

linalg_c.free_i64m.argtypes = [Cint64_matrix_t]
linalg_c.free_i64m.restype = ctypes.c_void_p

linalg_c.copy_f16m.argtypes = [Cfloat16_matrix_t]
linalg_c.copy_f16m.restype = Cfloat16_matrix_res_t

linalg_c.copy_f32m.argtypes = [Cfloat32_matrix_t]
linalg_c.copy_f32m.restype = Cfloat32_matrix_res_t

linalg_c.copy_f64m.argtypes = [Cfloat64_matrix_t]
linalg_c.copy_f64m.restype = Cfloat64_matrix_res_t

linalg_c.copy_i32m.argtypes = [Cint32_matrix_t]
linalg_c.copy_i32m.restype = Cint32_matrix_res_t

linalg_c.copy_i64m.argtypes = [Cint64_matrix_t]
linalg_c.copy_i64m.restype = Cint64_matrix_res_t

linalg_c.f16m_fill.argtypes = [ctypes.c_size_t, ctypes.c_size_t, float16_t]
linalg_c.f16m_fill.restype = Cfloat16_matrix_res_t

linalg_c.f32m_fill.argtypes = [ctypes.c_size_t, ctypes.c_size_t, float32_t]
linalg_c.f32m_fill.restype = Cfloat32_matrix_res_t

linalg_c.f64m_fill.argtypes = [ctypes.c_size_t, ctypes.c_size_t, float64_t]
linalg_c.f64m_fill.restype = Cfloat64_matrix_res_t

linalg_c.i32m_fill.argtypes = [ctypes.c_size_t, ctypes.c_size_t, int32_t]
linalg_c.i32m_fill.restype = Cint32_matrix_res_t

linalg_c.i64m_fill.argtypes = [ctypes.c_size_t, ctypes.c_size_t, int64_t]
linalg_c.i64m_fill.restype = Cint64_matrix_res_t

linalg_c.f16m_row_vector_to_matrix.argtypes = [Cfloat16_matrix_t, ctypes.c_size_t]
linalg_c.f16m_row_vector_to_matrix.restype = Cfloat16_matrix_res_t

linalg_c.f32m_row_vector_to_matrix.argtypes = [Cfloat32_matrix_t, ctypes.c_size_t]
linalg_c.f32m_row_vector_to_matrix.restype = Cfloat32_matrix_res_t

linalg_c.f64m_row_vector_to_matrix.argtypes = [Cfloat64_matrix_t, ctypes.c_size_t]
linalg_c.f64m_row_vector_to_matrix.restype = Cfloat64_matrix_res_t

linalg_c.i32m_row_vector_to_matrix.argtypes = [Cint32_matrix_t, ctypes.c_size_t]
linalg_c.i32m_row_vector_to_matrix.restype = Cint32_matrix_res_t

linalg_c.i64m_row_vector_to_matrix.argtypes = [Cint64_matrix_t, ctypes.c_size_t]
linalg_c.i64m_row_vector_to_matrix.restype = Cint64_matrix_res_t

linalg_c.f16m_column_vector_to_matrix.argtypes = [Cfloat16_matrix_t, ctypes.c_size_t]
linalg_c.f16m_column_vector_to_matrix.restype = Cfloat16_matrix_res_t

linalg_c.f32m_column_vector_to_matrix.argtypes = [Cfloat32_matrix_t, ctypes.c_size_t]
linalg_c.f32m_column_vector_to_matrix.restype = Cfloat32_matrix_res_t

linalg_c.f64m_column_vector_to_matrix.argtypes = [Cfloat64_matrix_t, ctypes.c_size_t]
linalg_c.f64m_column_vector_to_matrix.restype = Cfloat64_matrix_res_t

linalg_c.i32m_column_vector_to_matrix.argtypes = [Cint32_matrix_t, ctypes.c_size_t]
linalg_c.i32m_column_vector_to_matrix.restype = Cint32_matrix_res_t

linalg_c.i64m_column_vector_to_matrix.argtypes = [Cint64_matrix_t, ctypes.c_size_t]
linalg_c.i64m_column_vector_to_matrix.restype = Cint64_matrix_res_t

linalg_c.f16m_to_f32m.argtypes = [Cfloat16_matrix_t]
linalg_c.f16m_to_f32m.restype = Cfloat32_matrix_res_t

linalg_c.f16m_to_f64m.argtypes = [Cfloat16_matrix_t]
linalg_c.f16m_to_f64m.restype = Cfloat64_matrix_res_t

linalg_c.f32m_to_f16m.argtypes = [Cfloat32_matrix_t]
linalg_c.f32m_to_f16m.restype = Cfloat16_matrix_res_t

linalg_c.f32m_to_f64m.argtypes = [Cfloat32_matrix_t]
linalg_c.f32m_to_f64m.restype = Cfloat64_matrix_res_t

linalg_c.f64m_to_f16m.argtypes = [Cfloat64_matrix_t]
linalg_c.f64m_to_f16m.restype = Cfloat16_matrix_res_t

linalg_c.f64m_to_f32m.argtypes = [Cfloat64_matrix_t]
linalg_c.f64m_to_f32m.restype = Cfloat32_matrix_res_t

linalg_c.matrix_cast.argtypes = [Cmatrix_t, matrix_type_t]
linalg_c.matrix_cast.restype = Cmatrix_cast_res_t

linalg_c.f16m_add.argtypes = [Cfloat16_matrix_t, Cfloat16_matrix_t]
linalg_c.f16m_add.restype = Cfloat16_matrix_res_t

linalg_c.f32m_add.argtypes = [Cfloat32_matrix_t, Cfloat32_matrix_t]
linalg_c.f32m_add.restype = Cfloat32_matrix_res_t

linalg_c.f64m_add.argtypes = [Cfloat64_matrix_t, Cfloat64_matrix_t]
linalg_c.f64m_add.restype = Cfloat64_matrix_res_t

linalg_c.i32m_add.argtypes = [Cint32_matrix_t, Cint32_matrix_t]
linalg_c.i32m_add.restype = Cint32_matrix_res_t

linalg_c.i64m_add.argtypes = [Cint64_matrix_t, Cint64_matrix_t]
linalg_c.i64m_add.restype = Cint64_matrix_res_t

linalg_c.f16m_sub.argtypes = [Cfloat16_matrix_t, Cfloat16_matrix_t]
linalg_c.f16m_sub.restype = Cfloat16_matrix_res_t

linalg_c.f32m_sub.argtypes = [Cfloat32_matrix_t, Cfloat32_matrix_t]
linalg_c.f32m_sub.restype = Cfloat32_matrix_res_t

linalg_c.f64m_sub.argtypes = [Cfloat64_matrix_t, Cfloat64_matrix_t]
linalg_c.f64m_sub.restype = Cfloat64_matrix_res_t

linalg_c.i32m_sub.argtypes = [Cint32_matrix_t, Cint32_matrix_t]
linalg_c.i32m_sub.restype = Cint32_matrix_res_t

linalg_c.i64m_sub.argtypes = [Cint64_matrix_t, Cint64_matrix_t]
linalg_c.i64m_sub.restype = Cint64_matrix_res_t

linalg_c.f16m_mul.argtypes = [Cfloat16_matrix_t, Cfloat16_matrix_t]
linalg_c.f16m_mul.restype = Cfloat16_matrix_res_t

linalg_c.f32m_mul.argtypes = [Cfloat32_matrix_t, Cfloat32_matrix_t]
linalg_c.f32m_mul.restype = Cfloat32_matrix_res_t

linalg_c.f64m_mul.argtypes = [Cfloat64_matrix_t, Cfloat64_matrix_t]
linalg_c.f64m_mul.restype = Cfloat64_matrix_res_t

linalg_c.i32m_mul.argtypes = [Cint32_matrix_t, Cint32_matrix_t]
linalg_c.i32m_mul.restype = Cint32_matrix_res_t

linalg_c.i64m_mul.argtypes = [Cint64_matrix_t, Cint64_matrix_t]
linalg_c.i64m_mul.restype = Cint64_matrix_res_t

linalg_c.f16m_div.argtypes = [Cfloat16_matrix_t, Cfloat16_matrix_t]
linalg_c.f16m_div.restype = Cfloat16_matrix_res_t

linalg_c.f32m_div.argtypes = [Cfloat32_matrix_t, Cfloat32_matrix_t]
linalg_c.f32m_div.restype = Cfloat32_matrix_res_t

linalg_c.f64m_div.argtypes = [Cfloat64_matrix_t, Cfloat64_matrix_t]
linalg_c.f64m_div.restype = Cfloat64_matrix_res_t

linalg_c.i32m_div.argtypes = [Cint32_matrix_t, Cint32_matrix_t]
linalg_c.i32m_div.restype = Cint32_matrix_res_t

linalg_c.i64m_div.argtypes = [Cint64_matrix_t, Cint64_matrix_t]
linalg_c.i64m_div.restype = Cint64_matrix_res_t

linalg_c.f16m_matmul.argtypes = [Cfloat16_matrix_t, Cfloat16_matrix_t]
linalg_c.f16m_matmul.restype = Cfloat16_matrix_res_t

linalg_c.f32m_matmul.argtypes = [Cfloat32_matrix_t, Cfloat32_matrix_t]
linalg_c.f32m_matmul.restype = Cfloat32_matrix_res_t

linalg_c.f64m_matmul.argtypes = [Cfloat64_matrix_t, Cfloat64_matrix_t]
linalg_c.f64m_matmul.restype = Cfloat64_matrix_res_t

linalg_c.i32m_matmul.argtypes = [Cint32_matrix_t, Cint32_matrix_t]
linalg_c.i32m_matmul.restype = Cint32_matrix_res_t

linalg_c.i64m_matmul.argtypes = [Cint64_matrix_t, Cint64_matrix_t]
linalg_c.i64m_matmul.restype = Cint64_matrix_res_t

linalg_c.f16m_neg.argtypes = [Cfloat16_matrix_t]
linalg_c.f16m_neg.restype = Cfloat16_matrix_res_t

linalg_c.f32m_neg.argtypes = [Cfloat32_matrix_t]
linalg_c.f32m_neg.restype = Cfloat32_matrix_res_t

linalg_c.f64m_neg.argtypes = [Cfloat64_matrix_t]
linalg_c.f64m_neg.restype = Cfloat64_matrix_res_t

linalg_c.i32m_neg.argtypes = [Cint32_matrix_t]
linalg_c.i32m_neg.restype = Cint32_matrix_res_t

linalg_c.i64m_neg.argtypes = [Cint64_matrix_t]
linalg_c.i64m_neg.restype = Cint64_matrix_res_t

linalg_c.f16m_exp.argtypes = [Cfloat16_matrix_t]
linalg_c.f16m_exp.restype = Cfloat16_matrix_res_t

linalg_c.f32m_exp.argtypes = [Cfloat32_matrix_t]
linalg_c.f32m_exp.restype = Cfloat32_matrix_res_t

linalg_c.f64m_exp.argtypes = [Cfloat64_matrix_t]
linalg_c.f64m_exp.restype = Cfloat64_matrix_res_t

linalg_c.i32m_exp.argtypes = [Cint32_matrix_t]
linalg_c.i32m_exp.restype = Cint32_matrix_res_t

linalg_c.i64m_exp.argtypes = [Cint64_matrix_t]
linalg_c.i64m_exp.restype = Cint64_matrix_res_t
